--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
 
         <dependency>
             <groupId>walkingkooka</groupId>
-            <artifactId>walkingkooka-tree-json</artifactId>
+            <artifactId>java-util-Locale-j2cl</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
