--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 
         <dependency>
             <groupId>walkingkooka</groupId>
-            <artifactId>java-util-Locale-j2cl</artifactId>
+            <artifactId>j2cl-java-util-Locale</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
