DateFormatSymbolsProvider replaced by walkingkooka-java-text-annotation-processor
- DateFormatSymbolsProvider and tool moved.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>j2cl-java-text</artifactId>
     <packaging>jar</packaging>
     <name>java.text.*</name>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <description>A custom j2cl compatible java.text</description>
     <url>https://github.com/mP1/j2cl-java-text</url>
 
@@ -108,21 +108,35 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.4.0</version>
+            <groupId>walkingkooka</groupId>
+            <artifactId>j2cl-java-util-Currency</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>walkingkooka</groupId>
-            <artifactId>j2cl-java-util-Locale</artifactId>
+            <artifactId>j2cl-java-text-annotation-processor</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.4.0</version>
         </dependency>
     </dependencies>
 
     <!-- ==================================================================== -->
     <build>
-        <!-- define build -->
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -131,7 +145,9 @@
                 <configuration>
                     <source>9</source>
                     <target>9</target>
-                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <compilerArgs>
+                        <arg>-Awalkingkooka.j2cl.java.util.Locale=*</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -145,6 +161,28 @@
                         <version>1.1.0</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-invoker-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>install</goal>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <cloneProjectsTo>${project.build.directory}/it-tests</cloneProjectsTo>
+                    <debug>true</debug>
+                    <invokerPropertiesFile>${project.build.directory}/it-repo/invoker.properties</invokerPropertiesFile>
+                    <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
+                    <settingsFile>src/it/settings.xml</settingsFile>
+                    <streamLogs>false</streamLogs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -192,9 +230,25 @@
                 </dependencies>
             </plugin>
             <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>walkingkooka/j2cl/java/text/DateFormatSymbolsProvider*</exclude>
+                        <exclude>walkingkooka/j2cl/java/util/currency/**</exclude>
+                        <exclude>walkingkooka/j2cl/java/util/locale/**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.0.1</version>
                 <configuration>
+                    <excludes>
+                        <exclude>walkingkooka/j2cl/java/text/DateFormatSymbolsProvider*</exclude>
+                        <exclude>walkingkooka/j2cl/java/util/currency/**</exclude>
+                        <exclude>walkingkooka/j2cl/java/util/locale/**</exclude>
+                    </excludes>
                     <excludeResources>true</excludeResources>
                 </configuration>
                 <executions>
