--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,9 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            
+            <!--
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-invoker-plugin</artifactId>
@@ -229,11 +232,13 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            -->
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <excludes>
                         <exclude>walkingkooka/j2cl/java/text/DateFormatSymbolsProvider*</exclude>
+                        <exclude>walkingkooka/j2cl/java/text/DecimalFormatProvider*</exclude>
                         <exclude>walkingkooka/j2cl/java/text/DecimalFormatSymbolsProvider*</exclude>
                         <exclude>walkingkooka/j2cl/java/util/currency/**</exclude>
                         <exclude>walkingkooka/j2cl/java/util/locale/**</exclude>
@@ -247,6 +252,7 @@
                 <configuration>
                     <excludes>
                         <exclude>walkingkooka/j2cl/java/text/DateFormatSymbolsProvider*</exclude>
+                        <exclude>walkingkooka/j2cl/java/text/DecimalFormatProvider*</exclude>
                         <exclude>walkingkooka/j2cl/java/text/DecimalFormatSymbolsProvider*</exclude>
                         <exclude>walkingkooka/j2cl/java/util/currency/**</exclude>
                         <exclude>walkingkooka/j2cl/java/util/locale/**</exclude>
@@ -263,7 +269,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
         <!-- Manage plugin versions -->
         <pluginManagement>
