j2cl-java-util-currency-annotation-processor c86c0facf9bcbbc13bf08ae1d39a2457332fe699 20200511
- https://github.com/mP1/j2cl-java-util-currency-annotation-processor/pull/24
- Currency-code annotation processor argument

- Updated POMs with new required annotation processor currency argument.

--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,7 @@
                     <target>9</target>
                     <compilerArgs>
                         <arg>-Awalkingkooka.j2cl.java.util.Locale=*</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.Currency=XXX</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
