--- a/src/it/dateformatsymbols-junit-test/pom.xml
+++ b/src/it/dateformatsymbols-junit-test/pom.xml
@@ -200,6 +200,7 @@
                             </formatting>
                             <java-compiler-arguments>
                                 <param>-Awalkingkooka.j2cl.java.util.Locale=EN*</param>
+                                <param>-Awalkingkooka.j2cl.java.util.Currency=XXX</param>
                             </java-compiler-arguments>
                             <language-out>ECMASCRIPT_2016</language-out>
                             <!-- dont want to parallelize -->
