--- a/src/it/decimalformatsymbols-junit-test/pom.xml
+++ b/src/it/decimalformatsymbols-junit-test/pom.xml
@@ -201,6 +201,7 @@
                             </formatting>
                             <java-compiler-arguments>
                                 <param>-Awalkingkooka.j2cl.java.util.Locale=EN*,FR*</param>
+                                <param>-Awalkingkooka.j2cl.java.util.Currency=XXX</param>
                             </java-compiler-arguments>
                             <language-out>ECMASCRIPT_2016</language-out>
                             <!-- dont want to parallelize -->
