POM maven-jar-plugin 3.2.0
- Fixes warnings about missing version

--- a/pom.xml
+++ b/pom.xml
@@ -232,6 +232,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
                 <configuration>
                     <excludes>
                         <exclude>walkingkooka/j2cl/java/text/DateFormatSymbolsProvider*</exclude>
