j2cl-locale 53a2f724e867faa70cd04ff8ae7af6c93771f70f 20200513
- https://github.com/mP1/j2cl-locale/pull/48
- logging control annotation processor argument

--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,7 @@
                     <compilerArgs>
                         <arg>-Awalkingkooka.j2cl.java.util.Locale=*</arg>
                         <arg>-Awalkingkooka.j2cl.java.util.Currency=XXX</arg>
+                        <arg>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
