--- a/src/it/decimalformat-junit-test/pom.xml
+++ b/src/it/decimalformat-junit-test/pom.xml
@@ -208,6 +208,7 @@
                             <java-compiler-arguments>
                                 <param>-Awalkingkooka.j2cl.java.util.Locale=und,EN*,FR*</param>
                                 <param>-Awalkingkooka.j2cl.java.util.Currency=XXX</param>
+                                <param>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</param>
                             </java-compiler-arguments>
                             <language-out>ECMASCRIPT_2016</language-out>
                             <!-- dont want to parallelize -->
