--- a/src/it/dateformatsymbols-junit-test/pom.xml
+++ b/src/it/dateformatsymbols-junit-test/pom.xml
@@ -199,8 +199,9 @@
                                 <param>PRETTY_PRINT</param>
                             </formatting>
                             <java-compiler-arguments>
-                                <param>-Awalkingkooka.j2cl.java.util.Locale=EN*</param>
                                 <param>-Awalkingkooka.j2cl.java.util.Currency=XXX</param>
+                                <param>-Awalkingkooka.j2cl.java.util.Locale=EN*</param>
+                                <param>-Awalkingkooka.j2cl.java.util.TimeZone=Australia/*</param>
                                 <param>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</param>
                             </java-compiler-arguments>
                             <language-out>ECMASCRIPT_2016</language-out>
