--- a/src/it/decimalformat-junit-test/pom.xml
+++ b/src/it/decimalformat-junit-test/pom.xml
@@ -206,8 +206,9 @@
                                 <param>PRETTY_PRINT</param>
                             </formatting>
                             <java-compiler-arguments>
-                                <param>-Awalkingkooka.j2cl.java.util.Locale=und,EN*,FR*</param>
                                 <param>-Awalkingkooka.j2cl.java.util.Currency=XXX</param>
+                                <param>-Awalkingkooka.j2cl.java.util.Locale=und,EN*,FR*</param>
+                                <param>-Awalkingkooka.j2cl.java.util.TimeZone=Australia/*</param>
                                 <param>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</param>
                             </java-compiler-arguments>
                             <language-out>ECMASCRIPT_2016</language-out>
