--- a/src/it/decimalformat-junit-test/pom.xml
+++ b/src/it/decimalformat-junit-test/pom.xml
@@ -199,7 +199,8 @@
                                 <jre.checkedMode>DISABLED</jre.checkedMode>
                                 <jre.checks.checkLevel>MINIMAL</jre.checks.checkLevel>
                                 <jsinterop.checks>DISABLED</jsinterop.checks>
-                                <walkingkooka-java-util-Locale-default>EN-*,FR-*</walkingkooka-java-util-Locale-default>
+                                <walkingkooka.j2cl.java.util.locale.Locale.DEFAULT>EN-AU</walkingkooka.j2cl.java.util.locale.Locale.DEFAULT>
+                                <walkingkooka.j2cl.java.util.timezone.TimeZone.DEFAULT>Australia/Sydney</walkingkooka.j2cl.java.util.timezone.TimeZone.DEFAULT>
                             </defines>
                             <externs/>
                             <formatting>
