--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,13 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.4.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>walkingkooka</groupId>
+            <artifactId>walkingkooka-java-shader</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <!-- ==================================================================== -->
