--- a/src/it/dateformatsymbols-junit-test/pom.xml
+++ b/src/it/dateformatsymbols-junit-test/pom.xml
@@ -114,6 +114,10 @@
                     <groupId>org.junit.platform</groupId>
                     <artifactId>junit-platform-engine</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>walkingkooka</groupId>
+                    <artifactId>walkingkooka-java-shader</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
