--- a/src/it/decimalformat-junit-test/pom.xml
+++ b/src/it/decimalformat-junit-test/pom.xml
@@ -102,15 +102,9 @@
 
     <dependencies>
         <dependency>
-            <!--
             <groupId>@project.groupId@</groupId>
             <artifactId>@project.artifactId@</artifactId>
             <version>@project.version@</version>
--->
-            <groupId>walkingkooka</groupId>
-            <artifactId>j2cl-java-text</artifactId>
-            <version>1.0-SNAPSHOT</version>
-
             <exclusions>
                 <exclusion>
                     <groupId>org.apiguardian</groupId>
@@ -119,6 +113,10 @@
                 <exclusion>
                     <groupId>org.junit.platform</groupId>
                     <artifactId>junit-platform-engine</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>walkingkooka</groupId>
+                    <artifactId>walkingkooka-java-shader</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
