--- a/src/it/decimalformatsymbols-junit-test/pom.xml
+++ b/src/it/decimalformatsymbols-junit-test/pom.xml
@@ -110,6 +110,7 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
+                            <browser-log-level>ALL</browser-log-level>
                             <browsers>
                                 <param>CHROME</param>
                             </browsers>
