github actions maven 3.6.3

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,11 @@ jobs:
         with:
           java-version: 9
 
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v4
+        with:
+          maven-version: 3.6.3
+
       - name: Maven dependency/resolve
         run: mvn dependency:resolve
 
@@ -30,3 +35,32 @@ jobs:
           tail -n 500 target/it-tests/decimalformatsymbols-junit-test/build.log
           tail -n 500 output.txt
 
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: dateformats-junit-test-build.log
+          path: target/it-tests/dateformats-junit-test/build.log
+
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: dateformatsymbols-junit-test-build.log
+          path: target/it-tests/dateformatsymbols-junit-test/build.log
+
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: decimalformat-junit-test-build.log
+          path: target/it-tests/decimalformat-junit-test/build.log
+
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: decimalformatsymbols-junit-test-build.log
+          path: target/it-tests/decimalformatsymbols-junit-test/build.log
+
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: it-output.txt
+          path: it-output.txt
