--- a/pom.xml
+++ b/pom.xml
@@ -161,8 +161,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>11</source>
+                    <target>11</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>walkingkooka</groupId>
@@ -318,6 +318,7 @@
                     <cloneProjectsTo>${project.build.directory}/it-tests</cloneProjectsTo>
                     <debug>true</debug>
                     <invokerPropertiesFile>src/it/invoker.properties</invokerPropertiesFile>
+                    <invokerTest>gwt-jar-test</invokerTest>
                     <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
                     <settingsFile>src/it/settings.xml</settingsFile>
                     <streamLogs>false</streamLogs>
